--- a/buildpack.toml
+++ b/buildpack.toml
@@ -12,13 +12,19 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-api = "0.5"
+api = "0.6"
 
 [buildpack]
 id       = "paketo-buildpacks/image-labels"
 name     = "Paketo Image Labels Buildpack"
 version  = "{{.version}}"
 homepage = "https://github.com/paketo-buildpacks/image-labels"
+description = "A Cloud Native Buildpack that enables configuration of labels on the created image"
+keywords    = ["image-labels", "labels"]
+
+[[buildpack.licenses]]
+type = "Apache-2.0"
+uri  = "https://github.com/paketo-buildpacks/image-labels/blob/main/LICENSE"
 
 [[stacks]]
 id = "io.buildpacks.stacks.bionic"
