Added buildpack.toml entries for SBOM formats, bumped API & libpak

--- a/buildpack.toml
+++ b/buildpack.toml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-api = "0.6"
+api = "0.7"
 
 [buildpack]
   description = "A Cloud Native Buildpack that enables configuration of labels on the created image"
@@ -21,6 +21,7 @@ api = "0.6"
   keywords = ["image-labels", "labels"]
   name = "Paketo Image Labels Buildpack"
   version = "{{.version}}"
+  sbom-formats = ["application/vnd.cyclonedx+json", "application/vnd.syft+json"]
 
   [[buildpack.licenses]]
     type = "Apache-2.0"
