Implement RFC 0050: Rename Buildpack
Renames 'Paketo Image Labels Buildpack' to 'Paketo Buildpack for Image Labels'.

Implements RFC 0050, https://github.com/paketo-buildpacks/rfcs/issues/233, for this buildpack.

Signed-off-by: Daniel Mikusa <dmikusa@vmware.com>

--- a/buildpack.toml
+++ b/buildpack.toml
@@ -19,7 +19,7 @@ api = "0.7"
   homepage = "https://github.com/paketo-buildpacks/image-labels"
   id = "paketo-buildpacks/image-labels"
   keywords = ["image-labels", "labels"]
-  name = "Paketo Image Labels Buildpack"
+  name = "Paketo Buildpack for Image Labels"
   version = "{{.version}}"
   sbom-formats = ["application/vnd.cyclonedx+json", "application/vnd.syft+json"]
 
