--- a/.github/workflows/pb-create-package.yml
+++ b/.github/workflows/pb-create-package.yml
@@ -227,5 +227,5 @@ jobs:
               with:
                 address: docker.io/paketobuildpacks/image-labels@${{ steps.package.outputs.digest }}
                 id: paketo-buildpacks/image-labels
-                token: ${ secrets.PAKETO_BOT_GITHUB_TOKEN }
+                token: ${{ secrets.PAKETO_BOT_GITHUB_TOKEN }}
                 version: ${{ steps.version.outputs.version }}
